tests/negative/semantics/duplicate_args.stream
// EXPECT: Error
function bad(a: Int, a: Int) -> Int { // Error: 'a' already defined
    return a;
}